syntax = "proto3";
package qadena.pricefeed;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/c3qtech/qadena_v3/x/pricefeed/types";

message CurrentPrice {
  
  string marketId = 1; 
  string price = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}
